--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/plugins.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link id="theme-css" href="css/dark.css" rel="stylesheet" type="text/css">
-  <!-- <link id="theme-css" href="css/light.css" rel="stylesheet" type="text/css"> -->
+  <!-- <link id="theme-css" href="css/dark.css" rel="stylesheet" type="text/css"> -->
+  <link id="theme-css" href="css/light.css" rel="stylesheet" type="text/css">
 </head>
 <!-- HEAD END -->
 <!-- BODY -->
@@ -33,7 +33,7 @@
       </a>
     </div>
     <div id="tool-wrap">
-      <div id="object-settings-select" class="tool tool-active" data-id="object-settings">
+      <div id="object-settings-select" class="tool" data-id="object-settings">
         <span class="material-icons">tune</span>
         <p>Settings</p>
       </div>
@@ -61,7 +61,7 @@
         <span class="material-icons">videocam</span>
         <p>Videos</p>
       </div>
-      <div id="audio-tool-select" class="tool" data-id="audio-tool">
+      <div id="audio-tool-select" class="tool tool-active" data-id="audio-tool">
         <span class="material-icons">queue_music</span>
         <p>Audio</p>
       </div>
@@ -1134,7 +1134,7 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/fabric.min.js"></script>
   <script src="js/plugins.min.js"></script>
-  <script src="js/pmotion.min.js"></script>
+  <script src="js/non-minified/pmotion.js"></script>
   <script src="js/custom.js"></script>
   <!-- Translation Strings -->
   <script>
